--- a/src/App.css
+++ b/src/App.css
@@ -101,3 +101,17 @@
   color:#00AAF0;
   text-decoration-line: none;
 }
+
+/* Autosizer scroll */
+.ReactVirtualized__List::-webkit-scrollbar {
+  width: 10px;
+}
+.ReactVirtualized__List::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.ReactVirtualized__List::-webkit-scrollbar-track {
+  background-color: lightgray;
+}
