--- a/src/views/Treatment/Treatment.css
+++ b/src/views/Treatment/Treatment.css
@@ -65,6 +65,19 @@
   width: 680px; 
 }
 
+.TreatmentPatientList_Totaltable::-webkit-scrollbar {
+  width: 10px;
+}
+.TreatmentPatientList_Totaltable::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.TreatmentPatientList_Totaltable::-webkit-scrollbar-track {
+  background-color: lightgray;
+}
+
 .TreatmentPatientList_table {
   text-align: center;
   font-size: small;
@@ -107,6 +120,20 @@
   height: 355px;
   text-align: center;
 }
+
+.TreatmentHistoryList_Totaltable::-webkit-scrollbar {
+  width: 10px;
+}
+.TreatmentHistoryList_Totaltable::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.TreatmentHistoryList_Totaltable::-webkit-scrollbar-track {
+  background-color: lightgray;
+}
+
 
 /* TreatmentCreateForm*/
 .TreatmentCreateForm {
@@ -256,6 +283,19 @@
   text-align: center;
 }
 
+.TreatmentSearch_2_Totaltable::-webkit-scrollbar {
+  width: 10px;
+}
+.TreatmentSearch_2_Totaltable::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.TreatmentSearch_2_Totaltable::-webkit-scrollbar-track {
+  background-color: lightgray;
+}
+
 .TreatmentSearch_2{
   /* overflow-y: scroll;
   height: 230px; */
@@ -349,6 +389,20 @@
   height: 205px;
 
 }
+.TreatmentHistoryRead_2_Totaltable::-webkit-scrollbar {
+  width: 10px;
+}
+
+.TreatmentHistoryRead_2_Totaltable::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.TreatmentHistoryRead_2_Totaltable::-webkit-scrollbar-track {
+  background-color: lightgray;
+}
+
 
 .TreatmentHistoryRead_2_title {
   font-weight: bold;
@@ -388,6 +442,23 @@
   height: 190px;
 
 }
+
+.TreatmentHistoryRead_3_Totaltable::-webkit-scrollbar {
+  width: 10px;
+}
+
+.TreatmentHistoryRead_3_Totaltable::-webkit-scrollbar-thumb {
+  background-color: grey;
+  border-radius: 10px;
+  background-clip: padding-box;
+  border: 2px solid transparent;
+}
+.TreatmentHistoryRead_3_Totaltable::-webkit-scrollbar-track {
+  background-color: lightgray;
+}
+
+
+
 .TreatmentHistoryRead_3_table{
   /* overflow-y: auto;
   height: 150px; */
