--- a/src/views/Inspection/components/modal/InspectionImgCreateFormModal/InspectionImgCreateFormModal.module.css
+++ b/src/views/Inspection/components/modal/InspectionImgCreateFormModal/InspectionImgCreateFormModal.module.css
@@ -44,3 +44,44 @@
       opacity: 1;
   }
 }
+
+/* InspectionImgCreateForm */
+.InspectionImgCreateForm{
+  height: 100%;
+}
+.InspectionImgCreateForm_title{
+  font-size: x-large;
+  font-weight: bold;
+}
+.InspectionImgCreateForm_1{
+  display: flex;
+  flex-direction: column;
+  /* border: 1px solid black; */
+  padding: 10px;
+  justify-content: center;
+  height: 90%;
+}
+.InspectionImgCreateForm_1_1{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  margin-bottom: 5px;
+  font-size: medium;
+}
+.InspectionImgCreateForm_1_1_1{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-left: 30px;
+}
+.InspectionImgCreateForm_1_1_2{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  width: 50%;
+}
+.InspectionImgCreateForm_1_2{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+}
