--- a/src/views/Inspection/components/modal/InspectionImgFormModal/InspectionImgFormModal.module.css
+++ b/src/views/Inspection/components/modal/InspectionImgFormModal/InspectionImgFormModal.module.css
@@ -44,3 +44,46 @@
       opacity: 1;
   }
 }
+
+/* InspectionImgForm */
+.InspectionImgForm{
+  height: 100%;
+}
+.InspectionImgForm_title{
+  font-size: x-large;
+  font-weight: bold;
+}
+.InspectionImgForm_1{
+  /* border: 1px solid black; */
+  display: flex;
+  flex-direction: row;
+  padding: 10px;
+  height: 100%;
+}
+.InspectionImgForm_1_1{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 5px;
+  font-size: medium;
+  width: 30%;
+}
+.InspectionImgForm_1_1_1{
+  display: flex;
+  flex-direction: column;
+  /* justify-content: flex-start; */
+  align-items: flex-start;
+}
+.InspectionImgForm_1_1_2{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+.InspectionImgForm_1_2{
+  width: 70%;
+}
+.InspectionImgForm_2{
+  display: flex;
+  justify-content: flex-end;
+}
