--- a/src/views/Help/Help.css
+++ b/src/views/Help/Help.css
@@ -12,7 +12,11 @@
   padding: 1rem;
   margin-right: 1rem;
   background-color: #0070C0;
-  font-size: 1.5rem;
+  font-size: 1.5rem;  
+  color: white;
+}
+.user_guide:hover {
+  color: white;
 }
 
 /* online_center */
