[update] Inspection.css

--- a/src/views/Inspection/Inspection.css
+++ b/src/views/Inspection/Inspection.css
@@ -57,6 +57,7 @@
   flex-direction: row;
   justify-content: space-between;
   flex-grow: 8;
+  cursor: pointer;
 }
 .InspectionPatientList_1_3_0{
   color: black;
