--- a/src/views/User/User.css
+++ b/src/views/User/User.css
@@ -84,21 +84,7 @@
   cursor: pointer;
 }
 
-.UserList_container {
-  /* display: flex; */
-  flex: 1;
-  /* flex-direction: row;
-  background-color: aquamarine; */
-}
-
-.content {
-  display: flex;
-  /* flex: 1; */
-  flex-direction: row;
-  background-color: aquamarine;
-}
-
-/* UserCreateForm & UserUpdateForm */
+/* UserCreateForm & UserUpdateForm 공통 */
 .User_item {
   display: flex;
   align-items: center;
@@ -108,9 +94,8 @@
 
 .User_hidden {
   visibility: hidden;
-  /* background-color: crimson; */
-  /* opacity: 0; */
 }
+
 .User_show {
   opacity: 1;
   display: flex;
