--- a/src/views/User/User.css
+++ b/src/views/User/User.css
@@ -1,12 +1,15 @@
 .User {
   padding: 1%;
   padding-bottom: 0;
+  /* height: 100%; */
 }
 
 /* 좌측 컴포넌트 */
 .User_left {
   width: 70%;
   margin-right: 1%;
+  /* height: 100%; */
+  height: 800px;
 }
 
 /* 우측 컴포넌트 */
@@ -101,4 +104,3 @@
   display: flex;
   justify-content: end;
 }
-
