[update] 시간 수정 및 validation 수정 및 데이터 분석실  및 접수 수정

--- a/src/views/Register/Register.css
+++ b/src/views/Register/Register.css
@@ -615,6 +615,9 @@ th {
 .tip_normal span {
   display: none
 }
+.tip_normal span::after:checked {
+  display: none
+}
 .tip_normal span::selection {
   -ms-user-select: none; 
   -moz-user-select: -moz-none;
