--- a/src/views/Treatment/Treatment.css
+++ b/src/views/Treatment/Treatment.css
@@ -302,7 +302,36 @@
 .TreatmentSearch_1_1{
   width: 230px;
 }
-
+.TreatmentSearch_1_1_1{
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  margin: 1%;
+}
+.TreatmentSearch_1_2_1{
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  margin:1% 1% 1% 2%;
+}
+.TreatmentSearch_1_2_2{
+  cursor: pointer;
+ display: flex;
+  flex-direction: row;
+  margin: 1%;
+}
+.TreatmentSearch_1_2_3{
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  margin: 1%;
+}
+.TreatmentSearch_1_2_4{
+  cursor: pointer;
+  display: flex;
+  flex-direction: row;
+  margin: 1%;
+}
 
 .TreatmentSearch_2_Totaltable{
   overflow-y: scroll;
