--- a/src/App.css
+++ b/src/App.css
@@ -143,7 +143,7 @@
     color: #2D3040 !important;
     display: inline-block !important;
     background-color: #cff1ff !important;
-    box-shadow: 0 0 7px 0 rgba(0, 0, 0, 0.16) !important;
+    box-shadow: 0 0 3px -4px rgba(0, 0, 0, 0.16) !important;
     opacity: 0.7 !important;
     width: 35rem !important;
     line-height: 3rem !important;
