--- a/src/views/Register/components/modal/RegisterWeekTimeTableModal/MonthTimeTable/MonthTimeTable.module.css
+++ b/src/views/Register/components/modal/RegisterWeekTimeTableModal/MonthTimeTable/MonthTimeTable.module.css
@@ -54,6 +54,7 @@
 .dates{
   display: flex;
   flex-flow: row wrap;
+  width: 850px;
   height: 600px;
   border-right: 1px solid #00aaf0;
   border-bottom: 1px solid #00aaf0;
