--- a/src/views/Inspection/components/modal/InspectionImgFormModal/InspectionImgFormModal.module.css
+++ b/src/views/Inspection/components/modal/InspectionImgFormModal/InspectionImgFormModal.module.css
@@ -9,10 +9,10 @@
   background-color: rgba(0, 0, 0, 0.6);
 }
 .InspectionImgModal > .modal > section {
-  /* width: 800px;
-  height: 400px; */
+  width: 900px;
+  height: 850px;
   max-width: 900px;
-  max-height: 800px;
+  max-height: 850px;
   margin:0 auto;
   border-radius: .3rem;
   /* 팝업이 열릴때 스르륵 열리는 효과 */
@@ -58,7 +58,7 @@
   display: flex;
   flex-direction: row;
   padding: 10px;
-  height: 100%;
+  height: 88%;
 }
 .InspectionImgForm_1_1{
   display: flex;
