--- a/src/views/Treatment/Treatment.css
+++ b/src/views/Treatment/Treatment.css
@@ -313,11 +313,18 @@
   flex-direction: row;
   margin:1% 1% 1% 2%;
 }
+.TreatmentSearch_1_2_1:hover{
+  color: #00AAF0;
+}
+
 .TreatmentSearch_1_2_2{
   cursor: pointer;
  display: flex;
   flex-direction: row;
   margin: 1%;
+}
+.TreatmentSearch_1_2_2:hover{
+  color: #00AAF0;
 }
 .TreatmentSearch_1_2_3{
   cursor: pointer;
@@ -325,13 +332,18 @@
   flex-direction: row;
   margin: 1%;
 }
+.TreatmentSearch_1_2_3:hover{
+  color: #00AAF0;
+}
 .TreatmentSearch_1_2_4{
   cursor: pointer;
   display: flex;
   flex-direction: row;
   margin: 1%;
 }
-
+.TreatmentSearch_1_2_4:hover{
+  color: #00AAF0;
+}
 .TreatmentSearch_2_Totaltable{
   overflow-y: scroll;
   height: 320px;
@@ -354,23 +366,6 @@
   background-color: lightgray;
 }
 
-.TreatmentSearch_2{
-  /* overflow-y: scroll;
-  height: 230px; */
-  /* text-align: center; */
-  /* padding: 10px 10px 0 10px; */
-  /* padding: 600px; */
-  
-}
-
-
-
-.TreatmentSearch_2_2{
-  /* height: 0.75rem !important; */
- 
-  /* background-color: blueviolet; */
-  
-}
 
 
 .TreatmentSearch_2_2_tr:hover{
