--- a/src/views/Treatment/components/modal/TreatmentHistoryReadModal/style.module.css
+++ b/src/views/Treatment/components/modal/TreatmentHistoryReadModal/style.module.css
@@ -97,7 +97,7 @@
   padding: 10px 10px 0 10px;
   text-align: center;
   /* height: 20%; */
-  width: 750px;
+  /* width: 750px; */
   /* border-spacing: 0px; */
 }
 .TreatmentHistoryRead_2_table_thead {
